overflow meta bugfix

--- a/styles/clearing-style.css
+++ b/styles/clearing-style.css
@@ -18,6 +18,12 @@ overflow-y: auto;
 cursor: none;
 }
 
+.site-wrapper {
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
 a {
 color: #f2f2f2;
 font-family: futur;
